# Scarlet

./: .ccproject  CMakeLists.txt  LICENSE  README.md  main.cpp
src/: NetworkInspector.cpp  NetworkInspector.hpp  Socket.hpp  TcpServer.hpp  main.cpp
src/Client/: TcpClient.hpp  main.cpp
src/Http/: HttpRequest.cpp  HttpRequest.hpp  HttpResponse.hpp  ScarletRequest.hpp
src/Logging/: ServerLog.hpp
src/Scarlet/: ScarletResponse.hpp  ScarletType.hpp
src/Server/: BaseResponse.hpp  Socket.hpp  TcpServer.hpp
src/Server/Http/: HttpRequest.hpp  HttpResponse.hpp
src/Server/Scarlet/: ScarletRequestType.hpp
